--- a/style.css
+++ b/style.css
@@ -51,6 +51,7 @@ form input {
     border-radius: .4rem;
     
     padding: 1.2rem 1.6rem;
+    
 }
 
 form input::placeholder {
@@ -58,7 +59,6 @@ form input::placeholder {
     font-size: 1.6rem;
     font-weight: 600;
 }
-
 
 .principal {
     padding: 0 2.2rem;
@@ -129,10 +129,89 @@ form input::placeholder {
     gap: 1.6rem;
 }
 
+.item h3 {
+    font-weight: 700;
+    font-size: 1.8rem;
+}
+
+.item p {
+    font-size: 1.4rem;
+    font-weight: 400;
+}
+
 footer {
     text-align: center;
     background-color: var(--bg-color-400);
     color: var(--bg-color-white);
 
     padding: 2.6rem 1.6rem;
+}
+
+#capa {
+    width: 100%;
+    height: auto;
+    object-fit: cover;
+}
+
+p {
+    text-align: justify;
+}
+
+@media (min-width: 720px) {
+    body {
+        max-width: 100vw;
+    }
+
+    header {
+        padding-inline: 10.9rem;
+    }
+
+    header form input {
+        width: 108rem;
+    }
+
+    main {
+        display: grid;
+        grid-template-columns: 2fr 1fr;
+        gap: 3.4rem;
+
+        padding-inline: 10.9rem;
+        margin-top: 4rem;
+    }
+
+    main #capa {
+        width: 100%;
+        height: 40rem;
+        object-fit: cover;
+
+        border-radius: 0.5rem;
+    }
+
+    .principal {
+        padding: 0;
+    }
+
+    .principal h1 {
+        margin-block: 0;
+    }
+
+    .principal > div:first-child { /* MUIIITTTTOOOO IMPORTANTE. Só selecionou o primeiro filho div de principal */
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+
+        margin-block: 3.1rem;
+    }
+
+    .principal .react {
+        margin: 0;
+    }
+
+    .principal p {
+        margin-bottom: 4rem;
+    }
+
+    .more {
+        padding: 0;
+    }
 }
